--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "date-fns": "^2.28.0",
+    "email-validator": "^2.0.4",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-constants": "~13.0.0",
